package br.com.caio.padroes.criacionais.factorymethod;

public interface Product {
    void executar();
}